# acho

./: .gitignore  .pre-commit-config.yaml  Challenges.md  Justfile  PRD.md  README.md  search_rs.dart
.github/workflows/: ci.yaml
backend/: Cargo.toml
backend/src/: keyword_search.rs  lib.rs  main.rs  semantic_search.rs
inference/: Cargo.toml
inference/src/: keyword_search.rs  lib.rs  main.rs  semantic_search.rs
lib_acho/: Cargo.toml
mobile/: design-inspiration.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
mobile/app/assets/css/: main.css
mobile/app/composables/app/: AppHeader.vue
mobile/app/composables/nav/: AppBottomNav.vue  AppBottomNavItem.vue
mobile/app/layouts/: app.vue  default.vue  walkthrough.vue
mobile/app/pages/: index.vue
mobile/app/pages/dashboard/: discover.vue  index.vue  library.vue  settings.vue
mobile/src-tauri/: tauri.conf.json
mobile/src-tauri/icons/: icon.icns
mobile_app/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
mobile_app/android/app/: build.gradle
mobile_app/integration_test/: simple_test.dart
mobile_app/lib/: file.dart  folder.dart  home.dart  main.dart  settings.dart  storage.dart  utils.dart
mobile_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
mobile_app/linux/flutter/: generated_plugins.cmake
mobile_app/rust/: Cargo.toml  build.rs
mobile_app/rust/.cargo/: config.toml
mobile_app/rust/src/: frb_generated.rs
mobile_app/rust/src/api/: acho.rs  keyword_search.rs  mod.rs  similarity.rs  simple.rs  tantivy.rs
mobile_app/rust/src/seekstorm/: commit.rs  doc_store.rs  index.rs  ingest.rs  intersection_simd.rs  lib.rs
mobile_app/rust_builder/: pubspec.yaml
mobile_app/rust_builder/android/: build.gradle  settings.gradle
mobile_app/rust_builder/ios/: rust_lib_mobile_app.podspec
mobile_app/rust_builder/linux/: CMakeLists.txt
mobile_app/rust_builder/macos/: rust_lib_mobile_app.podspec
mobile_app/rust_builder/windows/: CMakeLists.txt
mobile_app/windows/flutter/: generated_plugins.cmake
script/: android.justfile  clean.justfile  watch.justfile
scripts/: build_onnxruntime_android.sh  clean.justfile  download_onnxruntime_android.sh  onnx.justfile
scripts/pyscripts/: onnx_export.py  pyproject.toml
(+6 files in other folders)
