[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
seekstorm = "1.2.3"
serde_json = "1.0.149"
tokio = "1.49.0"


[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
