[package]
name = "rust_lib_mobile_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
seekstorm = { git = "https://github.com/Ok3ks/seekstorm", rev = "d59a1119f8012d0dd0a31252c44e83618bd4102f", version = "1.2.5" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
