[package]
name = "rust_lib_mobile_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
ndarray = "0.17.2"
tokenizers = { version = "0.22.2", default-features = false, features = ["esaxx_fast", "indicatif", "onig", "progressbar", "hf-hub", "http"] }
anyhow = "1.0.100"
ndarray-stats = "0.7.0"
ort = { version = "2.0.0-rc.11" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
strip = false
opt-level = 'z'